overflow fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -147,3 +147,8 @@
     width: 400px!important;
   }
 }
+@media (max-width: 900px) {
+  .doc{
+    width: 90%;
+  }
+}
